updated the code with closing functionality in browswer

--- a/fb.html
+++ b/fb.html
@@ -1,1 +1,10 @@
-<h2>not accessed</h2>
+<html>
+	<head>
+		<link rel="stylesheet" href="fb.css">
+	</head>
+	<h2>Ruby Software Company Policy</h2>
+	<h3> social Networking Times</h3>
+	<p>Morning before 9 </p>
+	<p> lunch 1.00 to 2.00</p>
+	<p>Evening after 6.00</p>
+</html>
